# deepsphere-cosmo-tf2

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.hooks/: .pre-commit-config.yaml
Examples/: Advanced_Tutorial.ipynb  Generative_Models.ipynb  Quick_Start.ipynb
Tests/: test_gnn_layers.py  test_healpy_layers.py  test_healpy_networks.py  test_utils.py
deepsphere/: __init__.py  gnn_layers.py  gnn_transformers.py  healpy_layers.py  healpy_networks.py  plot.py  utils.py
examples/: advanced_tutorial.ipynb  denoising_unet.ipynb  generative_models.ipynb  quick_start.ipynb
src/deepsphere/: __init__.py  _logger.py  gnn_layers.py  gnn_transformers.py  healpy_layers.py  healpy_networks.py  plot.py  utils.py
tests/: test_gnn_layers.py  test_gnn_transformers.py  test_healpy_layers.py  test_healpy_networks.py  test_utils.py
